[package]
name = "repp"
version = "0.1.0"
authors = ["Brian Sam-Bodden <bsb@redislabs.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
name = "repp"

[dependencies]
redis-module = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
itertools = "0.10.0"
json-color = "0.7.1"